Free week update 21st july

--- a/free-week-rotation/2015-07-21.html
+++ b/free-week-rotation/2015-07-21.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="July 14th - July 21st 2015 Free Week Rotation for Heroes of the Storm">
+    <meta name="description" content="July 21st - July 28th 2015 Free Week Rotation for Heroes of the Storm">
     <link rel="shortcut icon" href="18x18.ico">
-    <title>Free Hero Rotation (14 July 2015)</title>
+    <title>Free Hero Rotation (21 July 2015)</title>
 
     <!-- Bootstrap -->
     <link href="//heroesofthestorm.github.io/css/bootstrap.min.css" rel="stylesheet">
@@ -65,6 +65,150 @@
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
+
+        <h2>July 21st - July 28th</h2>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-danger" type="button">Arthas</button>
+          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Regeneration Master</a></li>
+            <li><a>Level 4 - Destruction</a></li>
+            <li><a>Level 7 - Rune Tap</a></li>
+            <li><a>Level 10 - Summon Sindragosa</a></li>
+            <li><a>Level 13 - Relentless</a></li>
+            <li><a>Level 16 - Embrace Death</a></li>
+            <li><a>Level 20 - Rewind</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/24-arthas#9OkPbPZDWD6IXPYAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/arthas">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-danger" type="button">Muradin</button>
+          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Reverberation</a></li>
+            <li><a>Level 4 - Thunderburn</a></li>
+            <li><a>Level 7 - Piercing Bolt</a></li>
+            <li><a>Level 10 - Avatar</a></li>
+            <li><a>Level 13 - Thunderstrike</a></li>
+            <li><a>Level 16 - Stoneform</a></li>
+            <li><a>Level 20 - Rewind</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/22-muradin#jPNGEJfD0IcDGJWAA ">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/muradin">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-success" type="button">Nazeebo</button>
+          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Ordder</b></a></li>
+            <li><a>Level 1 - Death Ritual</a></li>
+            <li><a>Level 4 - Spider Cluster</a></li>
+            <li><a>Level 7 - Gidbinn</a></li>
+            <li><a>Level 10 - Gargantuan</a></li>
+            <li><a>Level 13 - Sprint</a></li>
+            <li><a>Level 16 - Leaping Spiders</a></li>
+            <li><a>Level 20 - Humongoid</a></li>
+            <li class="divider"></li>          
+            <li><a href="http://www.heroesnexus.com/talent-calculator/4-nazeebo#oPiCwPkCeCvHgCEAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>          
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/nazeebo">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Raynor</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Seasoned Marksman</a></li>
+            <li><a>Level 4 - Focused Attacks</a></li>
+            <li><a>Level 7 - Revolution Overdrive</a></li>
+            <li><a>Level 10 - Raynor's Raiders</a></li>
+            <li><a>Level 13 - Double Barreled</a></li>
+            <li><a>Level 16 - Bullseye</a></li>
+            <li><a>Level 20 - Bolt of the Storm</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/3-raynor#oPWGSPCBaGPPZGDAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/raynor">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-info" type="button">Uther</button>
+          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Conjurer's Pursuit</a></li>
+            <li><a>Level 4 - Protective Shield</a></li>
+            <li><a>Level 7 - Cleanse</a></li>
+            <li><a>Level 10 - Divine Storm</a></li>
+            <li><a>Level 13 - Shrink Ray</a></li>
+            <li><a>Level 16 - Benediction</a></li>
+            <li><a>Level 20 - Redemption</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/8-uther#UQPQvPTCqPEPCPIAA">Zuna's Talent Build</a></li>
+            <li><a href="https://www.youtube.com/watch?v=YvLYWonB_A8">Video Commentary</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/uther">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <h3>Unlocked level 12</h3>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Jaina</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Deep Chill</a></li>
+            <li><a>Level 4 - Envenom</a></li>
+            <li><a>Level 7 - Frostbitten</a></li>
+            <li><a>Level 10 - Water Elemental</a></li>
+            <li><a>Level 13 - Ice Block</a></li>
+            <li><a>Level 16 - Numbing Blast</a></li>
+            <li><a>Level 20 - Bolt of the Storm</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/41-jaina#oP_NAOtN2N1N9NpAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/jaina">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <h3>Unlocked level 15</h3>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Kerrigan</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Sweeping Grasp</a></li>
+            <li><a>Level 4 - Envenom</a></li>
+            <li><a>Level 7 - Battle Momentum</a></li>
+            <li><a>Level 10 - Maelstrom</a></li>
+            <li><a>Level 13 - Sprint</a></li>
+            <li><a>Level 16 - Blood for Blood</a></li>
+            <li><a>Level 20 - Bolt of the Storm</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/12-kerrigan#oPmPwPPDtI_OvFMAA">Zuna's Talent Build</a></li>
+            <li><a href="https://www.youtube.com/watch?v=t8yB4yiBtWk">Video Commentary</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kerrigan">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <br />
+        <br />
 
         <h2>July 14th - July 21st</h2>
         <div class="btn-group btn-group-primary">
@@ -203,150 +347,6 @@
             <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kaelthas">Hero Information</a></li>
           </ul>
         </div>
-
-        <br />
-        <br />
-
-        <h2>July 7th - July 14th</h2>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Malfurion</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Scouting Drone</a></li>
-            <li><a>Level 4 - Protective Shield</a></li>
-            <li><a>Level 7 - Elune's Grace</a></li>
-            <li><a>Level 10 - Tranquility</a></li>
-            <li><a>Level 13 - Ice Block</a></li>
-            <li><a>Level 16 - Tenacious Roots</a></li>
-            <li><a>Level 20 - Storm Shield</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/16-malfurion#oPjLuPOBqPRBPBQAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/malfurion">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Stitches</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talents</b></a></li>
-            <li><a>Level 1 - Chew Your Food</a></li>
-            <li><a>Level 4 - Amplified Healing</a></li>
-            <li><a>Level 7 - Tenderizer</a></li>
-            <li><a>Level 10 - Putrid Bile</a></li>
-            <li><a>Level 13 - Relentless</a></li>
-            <li><a>Level 16 - Fishing Hook</a></li>
-            <li><a>Level 20 - Hardened Shield</a></li>
-            <li class="divider"></li>  
-            <li><a href="http://www.heroesnexus.com/talent-calculator/23-stitches#9OmAbPhDjDnPpAXAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>          
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/stitches">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Sylvanas</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - With the Wind</a></li>
-            <li><a>Level 4 - Envenom</a></li>
-            <li><a>Level 7 - Unstable Poison</a></li>
-            <li><a>Level 10 - Wailing Arrow</a></li>
-            <li><a>Level 13 - Evasive Fire</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/47-sylvanas#oPmPnQVQbQ_OXQvAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sylvanas">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Tassadar</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Conjurer's Pursuit</a></li>
-            <li><a>Level 4 - Mental Acuity</a></li>
-            <li><a>Level 7 - Static Charge</a></li>
-            <li><a>Level 10 - Archon</a></li>
-            <li><a>Level 13 - Scryer</a></li>
-            <li><a>Level 16 - Dimensional Warp</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/6-tassadar#hKmKuGlKeKgKCPGAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=SISUDJpmWoc">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tassadar">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Valla</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talents</b></a></li>
-            <li><a>Level 1 - Rapid Displacement</a></li>
-            <li><a>Level 4 - Sustained Anomaly</a></li>
-            <li><a>Level 7 - First Aid</a></li>
-            <li><a>Level 10 - Void Prison</a></li>
-            <li><a>Level 13 - Wormhole</a></li>
-            <li><a>Level 16 - Double Bombs</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/15-valla#oPmPrPmBkBdHNFPAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/valla">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 12</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Zeratul</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talents</b></a></li>
-            <li><a>Level 1 - Greater Cleave</a></li>
-            <li><a>Level 4 - Sustained Anomoly</a></li>
-            <li><a>Level 7 - Void Slash</a></li>
-            <li><a>Level 10 - Void Prison</a></li>
-            <li><a>Level 13 - Wormhole</a></li>
-            <li><a>Level 16 - Rendering Cleave</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/18-zeratul#jPkPrClC8OZPBPSAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/zeratul">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Johanna</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Knight Takes Pawn</a></li>
-            <li><a>Level 4 - Laws of Hope</a></li>
-            <li><a>Level 7 - Battle Momentum</a></li>
-            <li><a>Level 10 - Blessed Shield</a></li>
-            <li><a>Level 13 - Hold Your Ground</a></li>
-            <li><a>Level 16 - Holy Renewal</a></li>
-            <li><a>Level 20 - Indestructible</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/49-johanna#0QhP5QzQwQHR_QxAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/johanna">Hero Information</a></li>
-          </ul>
-        </div>
-
         <br />
 
         <style type="text/css">
@@ -376,7 +376,10 @@
             <div id="collapseChanges" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
                 <li class="list-group-item active">
-                  <strong>14 July 2015</strong>
+                  <strong>21 July 2015</strong>
+                </li>
+                <li class="list-group-item">
+                  <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-06-02"><strong>14 July 2015</strong></a>
                 </li>
                 <li class="list-group-item">
                   <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-07-07"><strong>07 July 2015</strong></a>
@@ -392,9 +395,6 @@
                 </li>
                 <li class="list-group-item">
                   <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-06-09"><strong>09 June 2015</strong></a>
-                </li>
-                <li class="list-group-item">
-                  <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-06-02"><strong>02 June 2015</strong></a>
                 </li>
                 <li class="list-group-item">
                   <a href="http://heroesofthestorm.github.io/free-week-rotation/index"><strong>See all</strong></a>
