Zuna tierlist 23rd July

--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -31,7 +31,7 @@
         </div>
 
         <h1>Zuna's Heroes of the Storm Tier List</h1>
-        <h4>Last updated 4th July 2015</h4>
+        <h4>Last updated 23rd July 2015</h4>
 
         <style type="text/css">
         .adslot-1 { display:inline-block; float: inherit; width:468px; height:60px; }
@@ -348,6 +348,26 @@
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/the-butcher">Hero Information</a></li>
               </ul>
             </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Nazeebo</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">         
+                <li><a href="http://www.heroesnexus.com/talent-calculator/4-nazeebo#oPiCwPkCeCvHgCEAA">Zuna's Talent Build</a></li>
+                <li class="divider"></li>          
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/nazeebo">Hero Information</a></li>
+              </ul>
+            </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Leoric</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">         
+                <li><a href="http://www.heroesnexus.com/talent-calculator/52-leoric#9O0SrPyS5SQT6S0AA">Zuna's Talent Build</a></li>
+                <li class="divider"></li>          
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/leoric">Hero Information</a></li>
+              </ul>
+            </div>
           </div>
 
         <h2>Tier 4</h2>
@@ -448,16 +468,6 @@
               </ul>
             </div>
             <div class="btn-group btn-group-primary">
-              <button data-toggle="dropdown" class="btn btn-primary" type="button">Nazeebo</button>
-              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">         
-                <li><a href="http://www.heroesnexus.com/talent-calculator/4-nazeebo#oPiCwPkCeCvHgCEAA">Zuna's Talent Build</a></li>
-                <li class="divider"></li>          
-                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/nazeebo">Hero Information</a></li>
-              </ul>
-            </div>
-            <div class="btn-group btn-group-primary">
               <button data-toggle="dropdown" class="btn btn-primary" type="button">Raynor</button>
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
@@ -497,6 +507,7 @@
             </div>
             <div id="collapseChanges" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
+                <li class="list-group-item"><strong>23 July 2015:</strong> Leoric is added to tier 3, Nazeebo 5→3</li>
                 <li class="list-group-item"><strong>4 July 2015:</strong> The Butcher is added, 14 new builds, Johanna & Kael'thas & Azmodan 2→1, Rehgar 3→1, Sylvanas & Anub'arak 1→2, Tyrande & Malfurion 3→2, Abathur & Brightwing & Kerrigan 2→3, Tychus & Li Li 4→3, The Lost Vikings 1→4, Sonya 5→4</li>
                 <li class="list-group-item"><strong>14 June 2015:</strong> Zeratul 2→1, Kael 1→2, Abathur & Zagara & Azmodan & Johanna 3→2</li>
                 <li class="list-group-item"><strong>6 June 2015:</strong> Updated build for Zeratul</li>
