--- a/free-hero-rotation.html
+++ b/free-hero-rotation.html
@@ -26,7 +26,7 @@
           <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
           <a href="http://heroesofthestorm.github.io/kenma-tierlist" class="list-group-item">Kenma's Tierlist</a>
           <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
-          <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
+          <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips &amp; Links</a>
         </div>
 
         
