Free week update + idream nazeebo fixes

--- a/tierlist/idream/2015-03-30.html
+++ b/tierlist/idream/2015-03-30.html
@@ -451,7 +451,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a><b>C9 iDream's Talent Ordder</b></a></li>
+                <li><a><b>C9 iDream's Talent Order</b></a></li>
                 <li><a>Level 1 - Death Ritual</a></li>
                 <li><a>Level 4 - Spider Cluster</a></li>
                 <li><a>Level 7 - Gidbinn</a></li>
