--- a/free-hero-rotation.html
+++ b/free-hero-rotation.html
@@ -66,6 +66,153 @@
         (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
 
+
+        <h2>July 28th - August 4th</h2>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-danger" type="button">Chen</button>
+          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Consuming Flame</a></li>
+            <li><a>Level 4 - Amplified Healing</a></li>
+            <li><a>Level 7 - Combat Stance</a></li>
+            <li><a>Level 10 - Wandering Keg</a></li>
+            <li><a>Level 13 - Relentless</a></li>
+            <li><a>Level 16 - Pressure Point</a></li>
+            <li><a>Level 20 - Bolt of the Storm</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/36-chen#9OoMrMfMmM0MBPkAA">Zuna's Talent Build</a></li>
+            <li><a href="https://www.youtube.com/watch?v=j71Xdlq3QyQ">Video Commentary</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/chen">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-info" type="button">Malfurion</button>
+          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Moonburn</a></li>
+            <li><a>Level 4 - Elune's Grace</a></li>
+            <li><a>Level 7 - Enduring Growth</a></li>
+            <li><a>Level 10 - Tranquility</a></li>
+            <li><a>Level 13 - Ice Block</a></li>
+            <li><a>Level 16 - Tenacious Roots</a></li>
+            <li><a>Level 20 - Storm Shield</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/16-malfurion#oPjLuPOBqPRBPBQAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/malfurion">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-danger" type="button">Tyrael</button>
+          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Regeneration Master</a></li>
+            <li><a>Level 4 - Amplified Healing</a></li>
+            <li><a>Level 7 - Battle Momentum</a></li>
+            <li><a>Level 10 - Judgement</a></li>
+            <li><a>Level 13 - Imposing Will</a></li>
+            <li><a>Level 16 - Blood for Blood</a></li>
+            <li><a>Level 20 - Hardened Shield</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/19-tyrael#9OmPYJxBxInPBPTAA">Zuna's Talent Build</a></li>
+            <li><a href="https://www.youtube.com/watch?v=sdrrA0QHuMk">Video Commentary</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tyrael">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Valla</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talents</b></a></li>
+            <li><a>Level 1 - Rapid Displacement</a></li>
+            <li><a>Level 4 - Sustained Anomaly</a></li>
+            <li><a>Level 7 - First Aid</a></li>
+            <li><a>Level 10 - Void Prison</a></li>
+            <li><a>Level 13 - Wormhole</a></li>
+            <li><a>Level 16 - Double Bombs</a></li>
+            <li><a>Level 20 - Rewind</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/15-valla#oPmPrPmBkBdHNFPAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/valla">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-success" type="button">Zagara</button>
+          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Reconstitution</a></li>
+            <li><a>Level 4 - Tumor Clutch</a></li>
+            <li><a>Level 7 - Endless Creep</a></li>
+            <li><a>Level 10 - Devouring Maw</a></li>
+            <li><a>Level 13 - Grooved Spines</a></li>
+            <li><a>Level 16 - Brood Expansion</a></li>
+            <li><a>Level 20 - Bolt of the Storm</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/32-zagara#oP9KCL4KEL2KALgAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/zagara">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <h3>Unlocked level 12</h3>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-info" type="button">Tyrande</button>
+          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Ranger's Mark</a></li>
+            <li><a>Level 4 - Protective Shield</a></li>
+            <li><a>Level 7 - Lunar Blaze</a></li>
+            <li><a>Level 10 - Starfall</a></li>
+            <li><a>Level 13 - Sprint</a></li>
+            <li><a>Level 16 - Shooting Star</a></li>
+            <li><a>Level 20 - Rewind</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/7-tyrande#jPSHwPRChBEPgLHAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tyrande">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <h3>Unlocked level 15</h3>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Illidan</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Shadow Shield</a></li>
+            <li><a>Level 4 - Immolation</a></li>
+            <li><a>Level 7 - First Aid</a></li>
+            <li><a>Level 10 - Metamorphosis</a></li>
+            <li><a>Level 13 - Sixth Sense</a></li>
+            <li><a>Level 16 - Blood for Blood</a></li>
+            <li><a>Level 20 - Bolt of the Storm</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/10-illidan#oPkPzK4BdPzJsKKAA">Zuna's Talent Build</a></li>
+            <li><a href="https://www.youtube.com/watch?v=fVA7oFAYIx0">Video Commentary</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/illidan">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <br />
+        <br />
+
+
         <h2>July 21st - July 28th</h2>
         <div class="btn-group btn-group-primary">
           <button data-toggle="dropdown" class="btn btn-danger" type="button">Arthas</button>
@@ -204,147 +351,6 @@
             <li><a href="https://www.youtube.com/watch?v=t8yB4yiBtWk">Video Commentary</a></li>
             <li class="divider"></li>
             <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kerrigan">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <br />
-        <br />
-
-        <h2>July 14th - July 21st</h2>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">E.T.C</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Prog Rock</a></li>
-            <li><a>Level 4 - Double-Necked Guitar</a></li>
-            <li><a>Level 7 - Follow Through</a></li>
-            <li><a>Level 10 - Mosh Pit</a></li>
-            <li><a>Level 13 - Groupies</a></li>
-            <li><a>Level 16 - Imposing Presence</a></li>
-            <li><a>Level 20 - Tour Bus</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/20-e-t-c#oP7R6RFD1RzR5RUAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/elite-tauren-chieftain">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Diablo</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talents</b></a></li>
-            <li><a>Level 1 - Soul Feast</a></li>
-            <li><a>Level 4 - Fire Devil</a></li>
-            <li><a>Level 7 - Soul Steal</a></li>
-            <li><a>Level 10 - Lightning Breath</a></li>
-            <li><a>Level 13 - Firestorm</a></li>
-            <li><a>Level 16 - Continuous Overpower</a></li>
-            <li><a>Level 20 - Hellstorm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/21-diablo#oPuRBDADzIVFXPVAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/diablo">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Li Li</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Conjurer's Pursuit</a></li>
-            <li><a>Level 4 - Mass Vortex</a></li>
-            <li><a>Level 7 - Shake it Off!</a></li>
-            <li><a>Level 10 - Jug of 1,000 cups</a></li>
-            <li><a>Level 13 - Shrink Ray</a></li>
-            <li><a>Level 16 - Two for One</a></li>
-            <li><a>Level 20 - Kung Fu Hustle</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/28-li-li#cOVIvPeIdOYICPcAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/li-li">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Rehgar</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Spiritwalker's Grace</a></li>
-            <li><a>Level 4 - Feral Heart</a></li>
-            <li><a>Level 7 - Cleanse</a></li>
-            <li><a>Level 10 - Ancestral Healing</a></li>
-            <li><a>Level 13 - Healing Surge</a></li>
-            <li><a>Level 16 - Tidal Waves</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/34-rehgar#jPWSRM9L3LHMEMiAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/rehgar">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Tychus</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Armor Piercing Rounds</a></li>
-            <li><a>Level 4 - Melting Point</a></li>
-            <li><a>Level 13 - Lead Rain</a></li>
-            <li><a>Level 10 - Commander Odin</a></li>
-            <li><a>Level 13 - Relentless</a></li>
-            <li><a>Level 16 - Stoneskin</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/9-tychus#/GkPPCLCdPdL_GJAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=PH-xu4WgF2k">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tychus">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 12</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Sergeant Hammer</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Advanced Artillery</a></li>
-            <li><a>Level 4 - Maelstrom Shells</a></li>
-            <li><a>Level 7 - First Aid</a></li>
-            <li><a>Level 10 - Napalm Strike</a></li>
-            <li><a>Level 13 - Barricade</a></li>
-            <li><a>Level 16 - Mine Field</a></li>
-            <li><a>Level 20 - Advanced Lava Strike</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/17-sgt-hammer#FPkPiPdCdPoJeGRAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sergeant-hammer">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Kael'thas</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Fel Infusion</a></li>
-            <li><a>Level 4 - Gathering Power</a></li>
-            <li><a>Level 7 - Fission Bomb</a></li>
-            <li><a>Level 10 - Phoenix</a></li>
-            <li><a>Level 13 - Flamethrower</a></li>
-            <li><a>Level 16 - Ignite</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kaelthas">Hero Information</a></li>
           </ul>
         </div>
 
