--- a/free-week-rotation/2015-07-28.html
+++ b/free-week-rotation/2015-07-28.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="View the Free Week Rotation for Heroes of the Storm">
+    <meta name="description" content="July 28th - August 4th 2015 Free Week Rotation for Heroes of the Storm">
     <link rel="shortcut icon" href="18x18.ico">
-    <title>Free Hero Rotation</title>
+    <title>Free Hero Rotation (28 July 2015)</title>
 
     <!-- Bootstrap -->
     <link href="//heroesofthestorm.github.io/css/bootstrap.min.css" rel="stylesheet">
@@ -22,15 +22,15 @@
     <center>
       <div id="body">
         <div class="navigation list-group list-group-horizontal">
-          <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/kenma-tierlist" class="list-group-item">Kenma's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
-          <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips &amp; Links</a>
+                <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
+                <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
         </div>
 
         
         <h1>Free Week Rotation for Heroes of the Storm</h1>
+        <h4>Note: This is an older free week rotation (<a href="http://heroesofthestorm.github.io/free-hero-rotation">Click here for this week's rotation</a>)</h4>
           <div class="btn-group btn-group-primary">
             <a class="btn btn-primary">Assassin</a>
             <a class="btn btn-success">Specialist</a>
@@ -65,141 +65,6 @@
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
-
-        <h2>August 4th - August 11th</h2>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">E.T.C</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Prog Rock</a></li>
-            <li><a>Level 4 - Double-Necked Guitar</a></li>
-            <li><a>Level 7 - Follow Through</a></li>
-            <li><a>Level 10 - Mosh Pit</a></li>
-            <li><a>Level 13 - Groupies</a></li>
-            <li><a>Level 16 - Imposing Presence</a></li>
-            <li><a>Level 20 - Tour Bus</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/20-e-t-c#oP7R6RFD1RzR5RUAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/elite-tauren-chieftain">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Li Li</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Conjurer's Pursuit</a></li>
-            <li><a>Level 4 - Mass Vortex</a></li>
-            <li><a>Level 7 - Shake it Off!</a></li>
-            <li><a>Level 10 - Jug of 1,000 cups</a></li>
-            <li><a>Level 13 - Shrink Ray</a></li>
-            <li><a>Level 16 - Two for One</a></li>
-            <li><a>Level 20 - Kung Fu Hustle</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/28-li-li#cOVIvPeIdOYICPcAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/li-li">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Nova</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Ambush Snipe</a></li>
-            <li><a>Level 4 - Gathering Power</a></li>
-            <li><a>Level 7 - One in the Chamber</a></li>
-            <li><a>Level 10 - Precision Strike</a></li>
-            <li><a>Level 13 - Lethal Decoy</a></li>
-            <li><a>Level 16 - Crippling Shot</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/14-nova#jPICDCiApNIPUGOAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/nova">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Tassadar</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Conjurer's Pursuit</a></li>
-            <li><a>Level 4 - Mental Acuity</a></li>
-            <li><a>Level 7 - Static Charge</a></li>
-            <li><a>Level 10 - Archon</a></li>
-            <li><a>Level 13 - Prescience</a></li>
-            <li><a>Level 16 - Dimensional Warp</a></li>
-            <li><a>Level 20 - Dark Archon</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/6-tassadar#hKmKuGlKeKgKCPGAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=SISUDJpmWoc">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tassadar">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Thrall</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Seasoned Marksman</a></li>
-            <li><a>Level 4 - Envenom</a></li>
-            <li><a>Level 7 - Follow Through</a></li>
-            <li><a>Level 10 - Sundering</a></li>
-            <li><a>Level 13 - Restless Wolves</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/43-thrall#GPtO0OnO1O_OuOrAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/thrall">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 12</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Azmodan</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Taste for Blood</a></li>
-            <li><a>Level 4 - Bound Minion</a></li>
-            <li><a>Level 7 - Infernal Globe</a></li>
-            <li><a>Level 10 - Black Pool</a></li>
-            <li><a>Level 13 - March of Sin</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/39-azmodan#iNmPVNTNsNXNkNnAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/azmodan">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">The Butcher</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a href="http://www.heroesnexus.com/talent-calculator/54-the-butcher#oPkSrPcSlSrSuS2AA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/the-butcher">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <br />
-        <br />
-
 
         <h2>July 28th - August 4th</h2>
         <div class="btn-group btn-group-primary">
@@ -342,7 +207,6 @@
             <li><a href="http://www.heroesfire.com/hots/wiki/heroes/illidan">Hero Information</a></li>
           </ul>
         </div>
-
         <br />
 
         <style type="text/css">
@@ -372,10 +236,7 @@
             <div id="collapseChanges" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
                 <li class="list-group-item active">
-                  <strong>04 August 2015</strong>
-                </li>
-                <li class="list-group-item">
-                  <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-07-28"><strong>28 July 2015</strong></a>
+                  <strong>28 July 2015</strong>
                 </li>
                 <li class="list-group-item">
                   <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-07-21"><strong>21 July 2015</strong></a>
@@ -393,6 +254,9 @@
                   <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-06-23"><strong>23 June 2015</strong></a>
                 </li>
                 <li class="list-group-item">
+                  <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-06-16"><strong>16 June 2015</strong></a>
+                </li>
+                <li class="list-group-item">
                   <a href="http://heroesofthestorm.github.io/free-week-rotation/index"><strong>See all</strong></a>
                 </li>
               </div>
@@ -408,15 +272,17 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.3.1/jquery.cookie.min.js"></script>
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="//heroesofthestorm.github.io/js/bootstrap.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
       ga('create', 'UA-56620432-1', 'auto');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
+
     </script>
   </body>
 </html>
