Free week update 11th august

--- a/free-week-rotation/index.html
+++ b/free-week-rotation/index.html
@@ -70,6 +70,12 @@
             <div id="collapseChanges" class="panel-collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
                 <li class="list-group-item">
+                  <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-08-04"><strong>04 August 2015</strong></a>
+                </li>
+                <li class="list-group-item">
+                  <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-07-28"><strong>28 July 2015</strong></a>
+                </li>
+                <li class="list-group-item">
                   <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-07-21"><strong>21 July 2015</strong></a>
                 </li>
                 <li class="list-group-item">
