Replace Murky in Free-to-Play Rotaiton Aug11-18
See http://us.battle.net/heroes/en/forum/topic/17936383460 for update

--- a/free-hero-rotation.html
+++ b/free-hero-rotation.html
@@ -165,22 +165,22 @@
 
         <h3>Unlocked level 12</h3>
         <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Murky</button>
+          <button data-toggle="dropdown" class="btn btn-success" type="button">Brightwing</button>
           <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
             <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Bubble Breeze</a></li>
-            <li><a>Level 4 - Bigger Slime</a></li>
-            <li><a>Level 7 - Hindering Slime</a></li>
-            <li><a>Level 10 - Octo-Grab</a></li>
-            <li><a>Level 13 - Continuous Slime</a></li>
-            <li><a>Level 16 - Rejuvenating Bubble</a></li>
+            <li><a>Level 1 - Hyper Shift</a></li>
+            <li><a>Level 4 - Peekaboo!</a></li>
+            <li><a>Level 7 - Phase Shield</a></li>
+            <li><a>Level 10 - Blink Heal</a></li>
+            <li><a>Level 13 - Shield Bust</a></li>
+            <li><a>Level 16 - Greater Polymorph</a></li>
             <li><a>Level 20 - Rewind</a></li>
             <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/30-murky#jPbMcM8J0KNQJKeAA">Zuna's Talent Build</a></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/26-brightwing#LPIIJInIMIOSDSaAA">Zuna's Talent Build</a></li>
             <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/murky">Hero Information</a></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/brightwing">Hero Information</a></li>
           </ul>
         </div>
 
