Update Brightwing color

--- a/free-hero-rotation.html
+++ b/free-hero-rotation.html
@@ -165,8 +165,8 @@
 
         <h3>Unlocked level 12</h3>
         <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Brightwing</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
+          <button data-toggle="dropdown" class="btn btn-info" type="button">Brightwing</button>
+          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
             <li><a><b>C9 iDream's Talent Order</b></a></li>
